- Added DataBinding in gradle file - Deleted Old Fragment kotline files as well as old layout files - Created new Roller and Hisotry fragments with layout files - Fixed the menu items for Roller and History fragments - Added recycler view in history fragments - Added Clear button on history fragment - The application is able to go from Roller fragment to History fragment - Added Total text view on History fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,11 @@
 <resources>
+    <!-- menu items -->
     <string name="app_name">Assignment2</string>
     <string name="action_settings">Settings</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
+    <string name="action_history">History</string>
+    <string name="action_clear">Clear</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <!-- Fragment labels -->
+    <string name="roller_fragment_label">Roller</string>
+    <string name="history_fragment_label">History</string>
 </resources>
